# untitled

./: .gitignore  LICENSE  README.md  deny.toml  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  ci.yml  mdbook.yml
docs/: book.toml
docs/src/: SUMMARY.md  features.md  installation.md  introduction.md  resources.md  windows-specific-features.md
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: keyboard.rs  lib.rs  main.rs  mouse.rs
src-tauri/src/action_script/: action.rs  error.rs  mod.rs  orchestrator.rs  script.rs  types.rs
src-tauri/src/input/: keyboard.rs  mouse.rs
src/routes/: +layout.svelte  +page.svelte  CommandPanel.svelte  Modal.svelte
