[package]
name = "untitled"
version = "0.1.0"
description = "untitled"
license = "MIT"
authors = ["MeronNagy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "untitled_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2.1"
time = "0.3.36"
rdev = "0.5.3"
# [target.'cfg(windows)'.dependencies]
# winapi = { version = "0.3", features = ["winuser", "windef", "timeapi"] }
